--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "my-express-app",
+  "name": "fashion_app_backend",
   "version": "1.0.0",
   "main": "index.js",
-"scripts": {
-"start": "node index.js",
-"dev": "nodemon index.js"
-},
-  "keywords": [],
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
